--- a/pom.xml
+++ b/pom.xml
@@ -18,9 +18,6 @@
 			</plugin>
 		</plugins>
 	</build>
-	<groupId>com.example</groupId>
-	<artifactId>kidsphere</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -40,7 +37,15 @@
 			<groupId>mysql</groupId>
 			<version>5.1.45</version>
 		</dependency>
-
+		<dependency>
+			<artifactId>spring-boot-devtools</artifactId>
+			<groupId>org.springframework.boot</groupId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+			<groupId>org.springframework.boot</groupId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -57,6 +62,10 @@
 			<version>2.1.4.RELEASE</version>
 		</dependency>
 	</dependencies>
+	<groupId>com.example</groupId>
+	<artifactId>kidsphere</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>war</packaging>
 	<description>kidsphere</description>
 
 	<properties>
