--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://kidsphere.cov7o1wq5py1.us-east-2.rds.amazonaws.com:3306/\
-  songguanzhou?useSSL=false
+spring.datasource.url=jdbc:mysql://rest.cmauq23sjmkp.us-east-1.rds.amazonaws.com:3306/\
+  songguanzhou2?useSSL=false
 spring.datasource.username=songguanzhou
 spring.datasource.password=85238799
 spring.jpa.hibernate.ddl-auto=update
